# simple_mcp_client_test

./: README.md  client1.py  client2.py  main.py  pyproject.toml
