[project]
name = "mcp-client-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.3.14",
    "langchain-groq>=1.1.3",
    "langchain-mcp-adapters>=0.3.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.60.0",
]
